HERASAFXACMLCORE-55 HERASAFXACMLCORE-56
cleaned up some issues that reoccured because of a merge problem with issue HERASAFXACMLCORE-47.

git-svn-id: svn://localhost/herasaf-xacmlnew/trunk/herasaf-xacml/herasaf-xacml-core@1506 281314fa-7b5e-d943-bc7f-69d318bcf3fb